# GlobalLocalFaceModels

./: README.md
global/: CMakeLists.txt  ConfigureITK.cmake
global/Example/: RegisterTestPCA.cmd  stereo_pointcloud_landmarks.txt
global/MM_Restricted_PCA/: CMakeLists.txt  DataContainer.h  Definitions.h  FileHandler.cpp  FileHandler.h  FileLoader.cpp  FileLoader.h  FileWriter.cpp  FileWriter.h  KDTree3.cpp  KDTree3.h  MMProjectionCostFunction.cpp  MMProjectionCostFunction.h  Main.cpp  MathHelper.cpp  MathHelper.h  MultilinearModel.cpp  MultilinearModel.h  MultilinearModelHandler.cpp  MultilinearModelHandler.h  RegistrationHelper.h  VectorNX.h
global/Model/: ScaledAlignedLandmarks.txt
local/: CMakeLists.txt
local/Example/: RegisterTestLocalWaveletPCA.cmd  stereo_pointcloud_fitting_level_00_00.off  stereo_pointcloud_fitting_level_00_01.off  stereo_pointcloud_landmarks.txt
local/LocalWaveletPCA/: BSGWFactory.cpp  BSGWFactory.h  BSplineGridWavelet.h  C3Vector.h  CMakeLists.txt  FaceData.cpp  FaceData.h  GaussianSample.h  GlobalImageMatch.cpp  LocalWavletPCA.cpp  Matrix.h  NearestNeighborAssistant.cpp  NearestNeighborAssistant.h  NearestNeighborEnergy.h  Profile.cpp  Profile.h  Quaternion.h  RandomSample.h  StereoFace.cpp  StereoFace.h  TemplateRegistration.h  WaveletShapeFitter.h  WaveletShapeSampler.cpp  WaveletShapeSampler.h  XArray.h  abutil.h
local/Model/: mean_shape_0.bsgw  std_shape_0.bsgw
